<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/commontitlebar"  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/view_common_titlebar" /> 
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
          
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:singleLine="true"
	            android:text="@string/ssid_title"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/ap_ssid_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:singleLine="true"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:gravity="center_vertical"
	        android:orientation="horizontal"
	        android:visibility="gone">
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:singleLine="true"
	            android:text="@string/bssid_title"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/ap_bssid_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:layout_marginLeft="5dp"
	            android:singleLine="true"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/password_title"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/ap_password_edit"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:layout_marginLeft="5dp"
	            android:inputType="textPassword"
	            android:singleLine="true"
				android:cursorVisible="true"
				android:textCursorDrawable="@drawable/edittext_cursor" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:orientation="horizontal"
	        android:visibility="gone">
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/device_count_title"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/device_count_edit"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_norsamll"
	            android:inputType="number" 
	            android:text="1"/>
	    </LinearLayout>
	
	    <RadioGroup
	        android:id="@+id/package_mode_group"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:visibility="gone">
	
	        <RadioButton
	            android:id="@+id/package_broadcast"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/black"
	            android:text="@string/package_broadcast" />
	
	        <RadioButton
	            android:id="@+id/package_multicast"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:layout_marginLeft="20dp"
	            android:textColor="@color/black"
	            android:text="@string/package_multicast" />
	    </RadioGroup>
	
	    <TextView
	        android:id="@+id/message"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textColor="@android:color/holo_red_dark" />
	
	    <Space
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" />
	
	    <Button
	        android:id="@+id/confirm_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:background="@drawable/button_selector"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:textColor="@color/white"
	    	android:textSize="24dp"
	        android:text="@string/confirm" />
	
	    <TextView
	        android:id="@+id/version_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_norsamll" 
            android:visibility="gone"/>
	</LinearLayout>
</LinearLayout>
